Fix Module Type selection not showing updates & edit styling

--- a/website/src/views/mpe/form/DeleteButton.scss
+++ b/website/src/views/mpe/form/DeleteButton.scss
@@ -16,9 +16,3 @@
   margin-left: 0.04rem;
   opacity: 0.6;
 }
-
-@media only screen and (max-width: 576px) {
-  .delete {
-    margin: -1.6rem -1rem 0 0;
-  }
-}
